tests/pass/MultAssign.java
package pass;

public class MultAssign {
  public int multassign(int x, int y) {
    return x *= y;
  }
}
