tests/fail/BitOrAssign.java
package fail;

import java.lang.System;

public class BitOrAssign {

  public static void main(String[] args ) {
    int x = 4;
    x |= "hi";
  }

}
